--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -26,22 +26,26 @@
         <section id="appetizers">
         <h3>Appetizers</h3>
         <p>
+            <dl>
             <dt>Black bean purses</dt>
              <dd>Spicy black bean and a blend of Mexican cheeses wrapped in sheets of phyl-lo and baked until golden. $3.95</dd>
             <dt class="newitem">Southwestern napoleons with lump crab &mdash; <strong>new item!</dt></strong>
-            <dd>Layers of lump crab meat, bean and corn salsa, and our handmade flour tortillas. $7.95</dd></p>
+            <dd>Layers of lump crab meat, bean and corn salsa, and our handmade flour tortillas. $7.95</dd>
+            </dl>
+            </p>
         </section>
 
         <section id="maincourses">
         <h3>Main Courses</h3>
         <p>
+            <dl>
             <dt>Shrimp sate kebabs with peanut sauce</dt>
             <dd>Skewers of shrimp marinated in lemongrass, garlic, and fish sauce then grilled to perfection.
                 Served with spicy peanut sauce and jasmine rice. <span class="price">$12.95</span></dd>
             <dt class="newitem">Jerk rotisserie chicken with fried plantains &mdash; <strong>new item!</strong></dt>
             <dd>Tender chicken slow-roasted on the rotisserie, flavored with spicy and fragrant jerk sauce
                 and served with fried plantains and fresh mango. <span class="price">$12.95</span></dd>
-            
+            </dl>
         </p>
 
 </section>
@@ -77,4 +81,5 @@
 
 
     </body>
+
     </html>
